@@ -3,6 +3,14 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2022-11-09 03:26 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * cimgui/hbimgui.cpp
+  * cimgui-docking/hbimgui.cpp
+    * function returing strings are now handled in generator
+
+  * examples/images/hbmk.hbm
+    * check for IMGUI_DOCKING envvar
+
 2022-10-02 01:28 UTC+0200 Aleksander Czajczynski (hb fki.pl)
   * cimgui/hbimgui.cpp
     * make p_open parameter NIL-able. Now when functions like
